--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Clase HTML</title>
 </head>
 <body>
+    <header>
+        <img src="https://imgs.search.brave.com/IR5QpVolY6BYAtsNNasqtf2aSD9Qd7U3i3MXR4W30SU/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWRzLnR1cmJvbG9n/by5jb20vdXBsb2Fk/cy9kZXNpZ24vcHJl/dmlld19pbWFnZS8x/Njg2MTE5L3ByZXZp/ZXdfaW1hZ2UyMDIw/MTEwNC0zMjYzMi0x/MGE0aWd3LnBuZw" alt="Logo de la página">
     
+        <a href="./amanda.html">Amanda</a>
+        <a href="./fer.html">Fer</a>
+        <a href="./harold.html">Harold</a>
+        <a href="./nata.html">Nata</a>
+        <a href="./omar.html">Omar</a>
+    </header>
+
+    <main>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
