actualizacion fer.html

--- a/fer.html
+++ b/fer.html
@@ -10,8 +10,8 @@
         <img src="https://media.istockphoto.com/id/1317269947/es/vector/s%C3%ADmbolo-de-zapatilla-de-running-en-el-tel%C3%B3n-de-fondo-blanco.jpg?s=612x612&w=0&k=20&c=GO01QUsbA6sUM04kOHukGKUNWDWd0Px0dz_slq3-Bjo=" alt="Logo de la pagina">
         <a href="./index.html">Home</a>
         <a href="./nata.html">About</a>
-        <a href="">Gallery</a>
-        <a href="">Contact</a>
+        <a href="./amanda.html">Gallery</a>
+        <a href="./omar.html">Contact</a>
     </header>
     <main>
 
